docs: update oudated README